fixed footer buttons spacing

--- a/projet/client/main.css
+++ b/projet/client/main.css
@@ -90,11 +90,12 @@ footer{
 	width: 400px;
 	height: 30px;
 	border-radius: 15px;
-	font-size: 24px;
+	font-size: 20px;
+	margin-bottom: 10px;
 }
 .footerBar_container{
 	height: 100%;
-	width: 60%;
+	width: calc((5 * 90px) + 5 * 20px);
 	display: flex;
 	align-items: center;
     justify-content: space-between;
